// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter parses an highlighted attribute of hit object 1`] = `
<span
  className="ais-undefined"
>
  <span
    className="ais-undefined-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-undefined-highlighted"
  >
    hi
  </em>
  <span
    className="ais-undefined-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-undefined-highlighted"
  >
    hi
  </em>
  <span
    className="ais-undefined-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlighter renders a hit with a custom tag correctly 1`] = `
<span
  className="ais-undefined"
>
  <span
    className="ais-undefined-nonHighlighted"
  >
    awesome 
  </span>
  <mark
    className="ais-undefined-highlighted"
  >
    hi
  </mark>
  <span
    className="ais-undefined-nonHighlighted"
  >
    ghlighted 
  </span>
  <mark
    className="ais-undefined-highlighted"
  >
    hi
  </mark>
  <span
    className="ais-undefined-nonHighlighted"
  >
    t!
  </span>
</span>
`;
